force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__QA_Question__c/agf__QA_Question__c.object-meta.xml
<CustomObject>
    <description>A question to be added to the default test plan.</description>
    <label>Question</label>
    <nameField>
        <displayFormat>Question-{0000}</displayFormat>
        <label>Questions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>