force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__QA_Question__c/fields/agf__Category__c.field-meta.xml
<CustomField>
    <fullName>agf__Category__c</fullName>
    <description>Where the question will be categorized under.</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Admin</fullName>
                <default>true</default>
                <label>Admin</label>
            </value>
            <value>
                <fullName>Data Management</fullName>
            </value>
            <value>
                <fullName>Error Handling</fullName>
            </value>
            <value>
                <fullName>Functionality</fullName>
            </value>
            <value>
                <fullName>Globalization</fullName>
            </value>
            <value>
                <fullName>Help</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Performance and System Testing</fullName>
            </value>
            <value>
                <fullName>Platform Testing</fullName>
            </value>
            <value>
                <fullName>Application Testing</fullName>
            </value>
            <value>
                <fullName>Core Testing</fullName>
            </value>
            <value>
                <fullName>Regression Testing</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>UI testing</fullName>
            </value>
            <value>
                <fullName>Upgrade Script</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>