force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__QA_Question__c/fields/agf__Editable__c.field-meta.xml
<CustomField>
    <fullName>agf__Editable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field determines if the question can be editable. It is only set through the UI so that the question can not be edited from API calls.</description>
    <label>Editable</label>
    <type>Checkbox</type>
</CustomField>