force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__QA_Question__c/fields/agf__More_Info__c.field-meta.xml
<CustomField>
    <fullName>agf__More_Info__c</fullName>
    <description>Provide more info for the question</description>
    <label>More Info</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>