force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__QA_Question__c/fields/agf__Obsolete__c.field-meta.xml
<CustomField>
    <fullName>agf__Obsolete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The question is no longer valid</description>
    <label>Obsolete</label>
    <type>Checkbox</type>
</CustomField>