force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__QA_Question__c/fields/agf__Question_Text__c.field-meta.xml
<CustomField>
    <fullName>agf__Question_Text__c</fullName>
    <description>Contains the text of the question.</description>
    <label>Question_Text</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>