force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__QA_Question__c/fields/agf__URL__c.field-meta.xml
<CustomField>
    <fullName>agf__URL__c</fullName>
    <description>Provide an external URL for more information on the question</description>
    <label>URL</label>
    <type>Url</type>
</CustomField>